nav-bar created

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>hello world</h1>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">Mean Employees</a>
+    </div>
+  </nav>
+
+  <app-employee></app-employee>
