header of the table, and form style

--- a/frontend/src/app/components/employee/employee.component.html
+++ b/frontend/src/app/components/employee/employee.component.html
@@ -1,1 +1,25 @@
-<p>employee works!</p>
+<div class="row">
+    <!-- "formulario" has a third part of the width of the screen-->
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-body">
+                <h1>Formulario</h1>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-8">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Position</th>
+                    <th>Office</th>
+                    <th>Operations</th>
+                </tr>
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
+    </div>
+</div>
