code formated by Prettier. FormsModule imported. Form created in employee.component

--- a/frontend/src/app/components/employee/employee.component.html
+++ b/frontend/src/app/components/employee/employee.component.html
@@ -3,7 +3,38 @@
     <div class="col-md-4">
         <div class="card">
             <div class="card-body">
-                <h1>Formulario</h1>
+                <form>
+                    <div class="form-group">
+                        <input 
+                        type="text" 
+                        class="form-control" 
+                        placeholder="Enter your FullName">
+                    </div>
+                    <div class="form-group">
+                        <input 
+                        type="text" 
+                        class="form-control" 
+                        placeholder="Enter your Position">
+                    </div>
+                    <div class="form-group">
+                        <input 
+                        type="text" 
+                        class="form-control" 
+                        placeholder="Enter your Office">
+                    </div>
+                    <div class="form-group">
+                        <input 
+                        type="number" 
+                        class="form-control" 
+                        placeholder="Enter your Salary">
+                    </div>
+                    <button class="btn btn-primary mr-2">
+                        Clean
+                    </button>
+                    <button class="btn btn-secondary">
+                        Save
+                    </button>
+                </form>
             </div>
         </div>
     </div>
