problem with input type:"hidden" name:"_id".

--- a/frontend/src/app/components/employee/employee.component.html
+++ b/frontend/src/app/components/employee/employee.component.html
@@ -6,6 +6,8 @@
                 <!-- name||position,etc="": synchronizes with de corresponding Employee propierty. -->
                 <!-- [(ngModel)] = "employeeService.selectedEmployee": double data binding. -->
                 <form #employeeForm="ngForm" (ngSubmit)="addEmployee(employeeForm)">
+                    <!-- to determinate, if it's an editing or creating method (will replace it in .ts?) -->
+                    <input type="hidden" name="_id" #name="ngModel" [(ngModel)]="employeeService.selectedEmployee._id">
                     <div class="form-group">
                         <input 
                         type="text" 
@@ -46,7 +48,8 @@
                         [(ngModel)]="employeeService.selectedEmployee.salary"
                         >
                     </div>
-                    <button type="reset" class="btn btn-primary mr-2">
+                    <!-- (click)="resetForm(employeeForm)" -->
+                    <button class="btn btn-primary mr-2" type="reset">
                         Clean
                     </button>
                     <!-- at Save, will process, all the "#employeeForm", calling at addEmployee -->
@@ -72,8 +75,18 @@
                     <td>{{employee.name}}</td>
                     <td>{{employee.position}}</td>
                     <td>{{employee.office}}</td>
-                    <button class="btn btn-secondary btn-sm"><i class="material-icons" (click)="editEmployee(employee)">edit</i></button>
-                    <button class="btn btn-danger btn-sm" (click)="deleteEmployee(employee._id)"><i class="material-icons">delete</i></button>
+                    <button 
+                    class="btn btn-secondary btn-sm">
+                        <i class="material-icons" 
+                        (click)="editEmployee(employee)">edit
+                        </i>
+                    </button>
+                    <button 
+                    class="btn btn-danger btn-sm" 
+                    (click)="deleteEmployee(employee._id)">
+                        <i class="material-icons">delete
+                        </i>
+                    </button>
                     
                 </tr>
             </tbody>
