some comments, and a console log of the response in addEmployee. CRUD COMPLETE. FULLY FUNCTIONAL.

--- a/frontend/src/app/components/employee/employee.component.html
+++ b/frontend/src/app/components/employee/employee.component.html
@@ -75,6 +75,7 @@
                     <td>{{employee.name}}</td>
                     <td>{{employee.position}}</td>
                     <td>{{employee.office}}</td>
+<!-- with this button, from here, I store and send "employee"attributes to component.ts -->
                     <button 
                     class="btn btn-secondary btn-sm">
                         <i class="material-icons" 
